# cmake_practice2

Basic/: CMakeLists.txt  main.cpp
With_Subdirs/: CMakeLists.txt  commands.txt
With_Subdirs/app/: CMakeLists.txt
With_Subdirs/lib/: CMakeLists.txt
With_Subdirs/lib/my_lib1/: CMakeLists.txt  mylib.cpp
